# usuarios

./: .coverage  .env  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  Dockerfile  Pipfile  Procfile  README.md  alembic.ini  bandit.yaml  credentials.json  docker-compose.yml  heroku-Dockerfile  heroku.yml  main.py  noxfile.py  pylintrc  pyproject.toml  release-tasks.sh  requirements.txt
.github/workflows/: bandit.yml  deployer.yml  linters.yml  pre-deploy-hooks.yml  python-app.yml  tests.yml
alembic/: env.py
alembic/versions/: 025db36aa331_test.py  076151405c70_adding_to_users_table_columns_related_.py  0a69d1546a68_first_migration.py  17e3f9e05b6b_add_more_fields_to_table_users_nullable_.py  2913bf7dd25e_new_migration.py  2d857f24ef7e_test2.py  3900c5168f6f_add_more_fields_to_table_users.py  39d78dfd08ea_adding_profileimage_column.py  40739a580bac_trying_to_add_users_table.py  4239d87582b1_trying_to_add_users_table.py  4889e0f01a94_changing_profileimage_column_to_string_.py  4b6d549c2015_update_users_table_with_followings_and_.py  4cf82bb1d0b9_new_migration.py  4dd68526e410_new_migration.py  54f723f365e0_adding_token_table.py  5e3a2feaa75d_update_user_table_attributes.py  676a8aa0c124_new_migration.py  77359ff8bb19_test6.py  7b3bb05bbd28_test5.py  7f04299c7138_update_users_table_with_transactionhash_.py  8165ffabf0f2_test4.py  82ff255c5e1e_.py  91e939ad2ca8_adding_token_notification_to_users_table.py  97a6568f8d03_add_more_fields_to_table_users.py  (+11 more)
app/: logger.py  main.py
features/: user.feature
heroku/: heroku-entrypoint.sh
tests/: test_api.py
(+22 files in other folders)
