[tool.poetry]
name = "usuarios"
version = "0.1.0"
description = "Módulo Usuarios"
authors = ["Grupo 14 <lkasman@fi.uba.ar>"]

[tool.poetry.dependencies]
python = "^3.8"
sqlalchemy = "<1.4.0"
sqlalchemy_utils = "^0.36.8"
argparse = "^1.4.0"
pytest = {version = "^6.1.0", optional = true}
pytest-cov = {version = "^2.10.1", optional = true}
behave = "^1.2.6"
fastapi = "^0.75.1"
gunicorn = "^20.1.0"
psycopg2 = "^2.9.3"
passlib = "^1.7.4"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.5"
firebase-admin = "^5.2.0"
pydantic = {extras = ["email"], version = "^1.9.0"}
alembic = "^1.7.7"
FastAPI-SQLAlchemy = "^0.2.1"
uvicorn = "^0.17.6"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]
nox = "^2020.8.22"
pylint = "^2.6.0"
mypy = "^0.942"
flake8 = "^3.8.3"
black = "22.3.0"
pre-commit = "^2.7.1"
bandit = "^1.7.0"
bump2version = "^1.0.1"
isort = "^5.6.4"

[tool.poetry.extras]
testing = ["pytest", "pytest-cov"]

[tool.black]
line-length = 88
skip-string-normalization = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
